# RustClear

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: build.yml
crates/fstr/: Cargo.toml
crates/fstr/src/: fstr.rs  fstring.rs  inner.rs  iterator.rs  lib.rs  shared.rs  to_fstring.rs  utils.rs
crates/macros/: Cargo.toml
crates/macros/src/: block_metadata.rs  blocks.rs  derive_deref.rs  entity_metadata.rs  lib.rs  packet_deserializable.rs  packet_serializable.rs
replays/: .gitignore  0.1.0_partial_09.10.25_10-56-33.rcrp  0.1.0_partial_09.10.25_10-57-06.rcrp  Cargo.toml
replays/src/: error.rs  lib.rs  replay_packet.rs
replays/src/record/: mod.rs  profile_id.rs  record_buffer.rs  record_message.rs  run_record.rs
replays/src/replay/: mod.rs  replay_buffer.rs  replay_callback.rs  replay_message.rs  run_replay.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/block/: block_collision.rs  block_parameter.rs  blocks.rs  metadata.rs  mod.rs  rotatable.rs
server/src/commands/: command.rs  command_parse.rs  mod.rs  string_reader.rs
server/src/constants/: entity_variants.rs  gamemode.rs  mod.rs  particle.rs  potions.rs  sounds.rs
server/src/entity/: entities.rs  entity.rs  entity_appearance.rs  entity_metadata.rs  entity_metadata_serializable.rs  mod.rs  npc_asset.rs
server/src/entity/components/: entity_appearance.rs  entity_behaviour.rs  interactable.rs  mod.rs
server/src/inventory/: inventory.rs  item_stack.rs  menu.rs  mod.rs
server/src/network/: client.rs  connection_state.rs  internal_packets.rs  mod.rs  network.rs  run_network.rs  status.rs
server/src/network/binary/: mod.rs  nbt.rs  var_int.rs
server/src/network/binary/nbt/: deserialize.rs  mod.rs  nbt.rs  serialize.rs
server/src/network/packets/: packet.rs  packet_buffer.rs  packet_deserialize.rs  packet_serialize.rs
server/src/network/protocol/handshake/: serverbound.rs
server/src/network/protocol/login/: clientbound.rs  serverbound.rs
server/src/network/protocol/play/: clientbound.rs  serverbound.rs
server/src/network/protocol/status/: clientbound.rs  serverbound.rs
server/src/player/: attribute.rs  mod.rs  packet_handling.rs  packet_processing.rs  player.rs  player_iterator.rs  sidebar.rs
server/src/types/: aabb.rs  block_position.rs  chat_component.rs  direction.rs  mod.rs  sized_string.rs  sized_string_mut.rs  status.rs
server/src/utils/: mod.rs  seeded_rng.rs
server/src/world/: world.rs
server/src/world/chunk/: chunk.rs  chunk_grid.rs  mod.rs
src/: main.rs
src/assets/: assets.rs  load_asset.rs  mod.rs
src/block/: block_interact_action.rs  mod.rs  rotatable.rs
src/constants/: mod.rs  particle.rs
src/dungeon/: door.rs  dungeon.rs  dungeon_player.rs  map.rs  menus.rs  mod.rs  seeded_rng.rs
src/dungeon/door/: door.rs  door_entity.rs  door_positions.rs  mod.rs  sound_emitter.rs
src/dungeon/entities/: block_appearance.rs  components.rs  mod.rs  moving_block_behaviour.rs  npc.rs
src/dungeon/items/: ability.rs  aspect_of_the_void.rs  dungeon_breaker.rs  dungeon_items.rs  ender_pearl.rs  etherwarp.rs  hyperion.rs  instant_transmission.rs  magical_map.rs  mod.rs  pickaxe.rs  skyblock_menu.rs  (+3 more)
src/entity/: entity.rs  entity_metadata.rs  mod.rs  npc_asset.rs
src/inventory/: item.rs  item_stack.rs  menu.rs  mod.rs
src/net/: client.rs  internal_packets.rs  run_network.rs  var_int.rs
src/network/: client.rs  internal_packets.rs  run_network.rs
src/player/: mod.rs  packet_handling.rs  player.rs  sidebar.rs
src/replays/: error.rs  mod.rs  replay_packet.rs
src/server/: server.rs  world.rs
src/types/: block_position.rs  mod.rs  sized_string.rs
src/world/: world.rs
(+58 files in other folders)
