[package]
name = "RustClear"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "server",
    "replays",
    "crates/*"
]

[dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.2"
indoc = "2.0.6"
server = { path = "server" }
replays = { path = "replays" }
chrono = "0.4.42"
glam = "0.30.5"
enumset = "1.1.10"
fstr = { path = "crates/fstr" }
include_dir = "0.7.4"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[features]
dungeon-breaker = []
