[package]
name = "replays"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
chrono = "0.4.42"
tokio = { version = "1.47.1", features = ["rt", "macros", "io-util", "sync", "time", "fs"] }
uuid = { version = "1.18.1" }
fstr = { path = "../crates/fstr"}

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"]}
