[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
anyhow = "1.0.98"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
blocks = { path = "../crates/macros" }
glam = "0.30.5"
enumset = "1.1.10"
